Final changes to flexbox right frame
Changed parameters of right frame to keep it a flexbox.
This way announcements and trending stack on top of each other,
regardless of the window size. Need to adjust min max size of grid
columns to ensure there is no overflow.

--- a/index.html
+++ b/index.html
@@ -193,55 +193,57 @@
                 </div>
             </div>
         </div>
-        <div class="blocks">
-            <p>Announcements</p>
-            <div class="announcements">
-                <div class="announce-card">
-                    <div class = "text">
-                        <p class="title">Site Maintenance</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+        <div class="right-frame">
+            <div class="blocks">
+                <p>Announcements</p>
+                <div class="announcements">
+                    <div class="announce-card">
+                        <div class = "text">
+                            <p class="title">Site Maintenance</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                        </div>
+                        <div class = "text">
+                            <p class="title">Community Share Day</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                          </div>
+                        <div class = "text">
+                            <p class="title">Updated Privacy Policy</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                        </div>
                     </div>
-                    <div class = "text">
-                        <p class="title">Community Share Day</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-                      </div>
-                    <div class = "text">
-                        <p class="title">Updated Privacy Policy</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-                    </div>  
                 </div>
             </div>
-        </div>
-        <div class="blocks">
-            <p>Trending</p>
-            <div class="trending">
-                <div class="trending-card">
-                    <div class="trending-block">
-                        <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
-                        <div class ="trending-user">
-                            <p class="trending-user-title">@ADDikt88</p>
-                            <p>Master Support Player</p>
+            <div class="blocks">
+                <p>Trending</p>
+                <div class="trending">
+                    <div class="trending-card">
+                        <div class="trending-block">
+                            <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
+                            <div class ="trending-user">
+                                <p class="trending-user-title">@ADDikt88</p>
+                                <p>Master Support Player</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trending-block">
-                        <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
-                        <div class ="trending-user">
-                            <p class="trending-user-title">@ADDikt88</p>
-                            <p>Master Support Player</p>
+                        <div class="trending-block">
+                            <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
+                            <div class ="trending-user">
+                                <p class="trending-user-title">@ADDikt88</p>
+                                <p>Master Support Player</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trending-block">
-                        <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
-                        <div class ="trending-user">
-                            <p class="trending-user-title">@ADDikt88</p>
-                            <p>Master Support Player</p>
+                        <div class="trending-block">
+                            <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
+                            <div class ="trending-user">
+                                <p class="trending-user-title">@ADDikt88</p>
+                                <p>Master Support Player</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trending-block">
-                        <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
-                        <div class ="trending-user">
-                            <p class="trending-user-title">@ADDikt88</p>
-                            <p>Master Support Player</p>
+                        <div class="trending-block">
+                            <img src="./assets/addikt8_400.jpg" alt="trending-user-icon">
+                            <div class ="trending-user">
+                                <p class="trending-user-title">@ADDikt88</p>
+                                <p>Master Support Player</p>
+                            </div>
                         </div>
                     </div>
                 </div>
